--- a/main.css
+++ b/main.css
@@ -83,3 +83,22 @@ img {
   transform: scale(1.2);
   cursor: pointer;
 }
+
+footer ul {
+  width: 300px;
+  list-style: none;
+  text-align: center;
+  padding: 0;
+  font-size: 40px;
+  color: white;
+  margin: 0 auto;
+}
+
+footer a,
+a:visited {
+  color: white;
+}
+
+a:hover {
+  color: rgb(0, 0, 0);
+}
